# eh-paikkatieto

./: README.md  generate.py  pyproject.toml  qgis-riskialueet.qgz
example/: join_by_coordinate.py
